--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -22,8 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5e5ba30c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gacoan Level 4.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Gacoan Level 4.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "839713f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -45,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
