--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -1,8 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7a372717",
+   "metadata": {},
+   "source": [
+    "# NFL Dataset Wrangling\n",
+    "\n",
+    "## A. Pendahuluan\n",
+    "### A.1. **Pendahuluan**\n",
+    "Lorem ipsum\n",
+    "\n",
+    "### A.2. **Alasan dataset menarik**\n",
+    "Lorem ipsum\n",
+    "\n",
+    "### A.3. **Pertanyaan/tujuan analisis**\n",
+    "Lorem ipsum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "0e375c71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c828b7f7",
    "metadata": {},
    "outputs": [
@@ -15,36 +41,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "print('Gacoan Level 4.')"
+    "import pandas as pd\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "5e5ba30c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gacoan Level 4.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Gacoan Level 4.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "839713f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
