--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -8,23 +8,32 @@
     "# NFL Dataset Wrangling\n",
     "\n",
     "## A. Pendahuluan\n",
-    "### A.1. **Pendahuluan**\n",
+    "### A.1. **Deskripsi dataset**\n",
     "Lorem ipsum\n",
     "\n",
     "### A.2. **Alasan dataset menarik**\n",
     "Lorem ipsum\n",
     "\n",
     "### A.3. **Pertanyaan/tujuan analisis**\n",
-    "Lorem ipsum"
+    "Lorem ipsum\n",
+    "\n",
+    "## B. Setup & Package\n",
+    "### B.1. **Semua import di bagian atas notebook**\n",
+    "Proses impor *library* kami lakukan di sel berikut:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0e375c71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
   },
   {
    "cell_type": "code",
@@ -40,10 +49,7 @@
      ]
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
