--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "0e375c71",
    "metadata": {},
    "outputs": [],
@@ -36,25 +36,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75434770",
+   "metadata": {},
+   "source": [
+    "### B.2. **Path file disimpan dalam variabel**\n",
+    "Proses penyimpanan path file kami lakukan di sel berikut:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c828b7f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gacoan Level 4.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "raw_path = {'attendance': '../data/raw/attendance.csv',\n",
+    "            'games': '../data/raw/games.csv',\n",
+    "            'standings': '../data/raw/standings.csv'}\n",
+    "output = '../data/processed'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f5474c5",
+   "metadata": {},
+   "source": [
+    "### B.3. **Penjelasan singkat fungsi paket**\n",
+    "Lorem ipsum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523538fd",
+   "metadata": {},
+   "source": [
+    "## C. Data Preparation\n",
+    "### C.1. **Import dataset**\n",
+    "Berikut adalah proses impor dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6b9fd747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = {name: pd.read_csv(path) for name, path in raw_path.items()}\n",
+    "attendance = dfs['attendance']\n",
+    "games = dfs['games']\n",
+    "standings = dfs['standings']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c207ac5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
