--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0e375c71",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "sns.set_style('whitegrid')"
    ]
   },
   {
@@ -46,15 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "c828b7f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_path = {'attendance': '../data/raw/attendance.csv',\n",
-    "            'games': '../data/raw/games.csv',\n",
-    "            'standings': '../data/raw/standings.csv'}\n",
-    "output = '../data/processed'\n"
+    "raw_path = {\n",
+    "    'attendance': '../data/raw/attendance.csv',\n",
+    "    'games': '../data/raw/games.csv',\n",
+    "    'standings': '../data/raw/standings.csv'\n",
+    "}\n",
+    "\n",
+    "clean_path = '../data/processed'\n"
    ]
   },
   {
@@ -78,21 +84,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "6b9fd747",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = {name: pd.read_csv(path) for name, path in raw_path.items()}\n",
-    "attendance = dfs['attendance']\n",
-    "games = dfs['games']\n",
-    "standings = dfs['standings']"
+    "attendance = pd.read_csv(raw_path['attendance'])\n",
+    "games = pd.read_csv(raw_path['games'])\n",
+    "standings = pd.read_csv(raw_path['standings'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f90e746",
+   "metadata": {},
+   "source": [
+    "### C.2. **Langkah cleaning dan Data Wrangling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5c207ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates di Games: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "attendance_clean = attendance.dropna(subset = ['weekly_attendance'])\n",
+    "print('Duplicates di Games:', games.duplicated().sum())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c207ac5",
+   "id": "1bdb3474",
    "metadata": {},
    "outputs": [],
    "source": []
