--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -5,21 +5,46 @@
    "id": "7a372717",
    "metadata": {},
    "source": [
-    "# NFL Dataset Wrangling\n",
+    "# **Wrangling a NFL Dataset**\n",
     "\n",
-    "## A. Pendahuluan\n",
-    "### A.1. **Deskripsi dataset**\n",
-    "Lorem ipsum\n",
+    "Anda akan menulis laporan dalam bentuk Jupyter Notebook (.ipynb) yang memuat bagian-bagian sesuai rubrik penilaian di bawah.\n",
     "\n",
-    "### A.2. **Alasan dataset menarik**\n",
-    "Lorem ipsum\n",
+    "1. **Pendahuluan**\n",
+    "    - **Deskripsi dataset**\n",
+    "    - **Alasan dataset menarik**\n",
+    "    - **Pertanyaan/tujuan analisis**\n",
     "\n",
-    "### A.3. **Pertanyaan/tujuan analisis**\n",
-    "Lorem ipsum\n",
+    "2. **Setup & Package**\n",
+    "    - **Semua import di bagian atas notebook**\n",
+    "    - **Path file disimpan dalam variabel**\n",
+    "    - **Penjelasan singkat fungsi paket**\n",
     "\n",
-    "## B. Setup & Package\n",
-    "### B.1. **Semua import di bagian atas notebook**\n",
-    "Proses impor *library* kami lakukan di sel berikut:"
+    "3. **Data Preparation**\n",
+    "    - **Import dataset**\n",
+    "    - **Langkah cleaning dan data wrangling dengan penjelasan Markdown**\n",
+    "    - **Standardisasi & transformasi**\n",
+    "    - **Save dataset bersih ke `data/processed/`**\n",
+    "\n",
+    "4. **Exploratory Data Analysis**, Minimal:\n",
+    "    - **3 visualisasi**\n",
+    "    - **2 tabel ringkasan**\n",
+    "    - **Interpretasi untuk setiap output**\n",
+    "\n",
+    "5. **Ringkasan & Kesimpulan**, Diskusikan:\n",
+    "    - **Temuan utama**\n",
+    "    - **Keterbatasan**\n",
+    "    - **Saran pengembangan**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92e2f1b7",
+   "metadata": {},
+   "source": [
+    "## **Pengerjaan**:\n",
+    "### B. Setup & Package\n",
+    "\n",
+    "Pada sel berikut kami impor library yang akan digunakan dan melakukan penyesuaian terhadap notebook kami."
    ]
   },
   {
@@ -40,16 +65,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75434770",
+   "id": "665d0b4e",
    "metadata": {},
    "source": [
-    "### B.2. **Path file disimpan dalam variabel**\n",
-    "Proses penyimpanan path file kami lakukan di sel berikut:"
+    "Setelah mengimpor library, kami melakukan setup *path* untuk membaca serta menulis dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "c828b7f7",
    "metadata": {},
    "outputs": [],
@@ -65,26 +89,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5474c5",
+   "id": "39117bf3",
    "metadata": {},
    "source": [
-    "### B.3. **Penjelasan singkat fungsi paket**\n",
-    "Lorem ipsum"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "523538fd",
-   "metadata": {},
-   "source": [
-    "## C. Data Preparation\n",
-    "### C.1. **Import dataset**\n",
-    "Berikut adalah proses impor dataset:"
+    "### C. Data Preparation\n",
+    "\n",
+    "#### Baca dataset dari data yang ada."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "6b9fd747",
    "metadata": {},
    "outputs": [],
@@ -96,23 +111,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f90e746",
-   "metadata": {},
-   "source": [
-    "### C.2. **Langkah cleaning dan Data Wrangling**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "272af0b5",
    "metadata": {},
    "source": [
-    "1. Function untuk mengecek bentuk, tipe data, *missing values*, dan *duplicates* pada dataset."
+    "#### Pembuatan function untuk melakukan *checking* pada dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5da9016d",
    "metadata": {},
    "outputs": [
@@ -120,166 +127,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Tahap Pengecekan 1: Games ---\n",
-      "Shape: (5324, 19)\n",
+      "==== Tahap Pengecekan 1 untuk Data games ====\n",
       "\n",
-      "Tipe Data:\n",
-      " year               int64\n",
-      "week              object\n",
-      "home_team         object\n",
-      "away_team         object\n",
-      "winner            object\n",
-      "tie               object\n",
-      "day               object\n",
-      "date              object\n",
-      "time              object\n",
-      "pts_win            int64\n",
-      "pts_loss           int64\n",
-      "yds_win            int64\n",
-      "turnovers_win      int64\n",
-      "yds_loss           int64\n",
-      "turnovers_loss     int64\n",
-      "home_team_name    object\n",
-      "home_team_city    object\n",
-      "away_team_name    object\n",
-      "away_team_city    object\n",
-      "dtype: object\n",
-      "\n",
-      "Missing Values:\n",
-      " year                 0\n",
-      "week                 0\n",
-      "home_team            0\n",
-      "away_team            0\n",
-      "winner               0\n",
-      "tie               5314\n",
-      "day                  0\n",
-      "date                 0\n",
-      "time                 0\n",
-      "pts_win              0\n",
-      "pts_loss             0\n",
-      "yds_win              0\n",
-      "turnovers_win        0\n",
-      "yds_loss             0\n",
-      "turnovers_loss       0\n",
-      "home_team_name       0\n",
-      "home_team_city       0\n",
-      "away_team_name       0\n",
-      "away_team_city       0\n",
-      "dtype: int64\n",
-      "\n",
-      "Duplicates: 0\n",
-      "---------------\n",
-      "--- Tahap Pengecekan 1: Attendance ---\n",
-      "Shape: (10846, 8)\n",
-      "\n",
-      "Tipe Data:\n",
-      " team                  object\n",
-      "team_name             object\n",
-      "year                   int64\n",
-      "total                  int64\n",
-      "home                   int64\n",
-      "away                   int64\n",
-      "week                   int64\n",
-      "weekly_attendance    float64\n",
-      "dtype: object\n",
-      "\n",
-      "Missing Values:\n",
-      " team                   0\n",
-      "team_name              0\n",
-      "year                   0\n",
-      "total                  0\n",
-      "home                   0\n",
-      "away                   0\n",
-      "week                   0\n",
-      "weekly_attendance    638\n",
-      "dtype: int64\n",
-      "\n",
-      "Duplicates: 0\n",
-      "---------------\n",
-      "--- Tahap Pengecekan 1: Standings ---\n",
-      "Shape: (638, 15)\n",
-      "\n",
-      "Tipe Data:\n",
-      " team                     object\n",
-      "team_name                object\n",
-      "year                      int64\n",
-      "wins                      int64\n",
-      "loss                      int64\n",
-      "points_for                int64\n",
-      "points_against            int64\n",
-      "points_differential       int64\n",
-      "margin_of_victory       float64\n",
-      "strength_of_schedule    float64\n",
-      "simple_rating           float64\n",
-      "offensive_ranking       float64\n",
-      "defensive_ranking       float64\n",
-      "playoffs                 object\n",
-      "sb_winner                object\n",
-      "dtype: object\n",
-      "\n",
-      "Missing Values:\n",
-      " team                    0\n",
-      "team_name               0\n",
-      "year                    0\n",
-      "wins                    0\n",
-      "loss                    0\n",
-      "points_for              0\n",
-      "points_against          0\n",
-      "points_differential     0\n",
-      "margin_of_victory       0\n",
-      "strength_of_schedule    0\n",
-      "simple_rating           0\n",
-      "offensive_ranking       0\n",
-      "defensive_ranking       0\n",
-      "playoffs                0\n",
-      "sb_winner               0\n",
-      "dtype: int64\n",
-      "\n",
-      "Duplicates: 0\n",
-      "---------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "def cek_data(df, nama):\n",
-    "    print(f\"--- Tahap Pengecekan 1: {nama} ---\")\n",
-    "    print(f\"Shape: {df.shape}\")\n",
-    "    print(\"\\nTipe Data:\\n\", df.dtypes)\n",
-    "    print(\"\\nMissing Values:\\n\", df.isnull().sum())\n",
-    "    print(\"\\nDuplicates:\", df.duplicated().sum())\n",
-    "    print('-'*15)\n",
-    "\n",
-    "cek_data(games, 'Games')\n",
-    "cek_data(attendance, 'Attendance')\n",
-    "cek_data(standings, 'Standings')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb2d0ec6",
-   "metadata": {},
-   "source": [
-    "2. Identifikasi pada langkah **C1**:\n",
-    "\n",
-    "Data `games`:\n",
-    "- Pada kolom `date`, tipe datanya masih berupa `object`, harus diganti menjadi `date`.\n",
-    "- Pada kolom `week`, tipe `object` karena di baris bawah ada week yang berupa istilah, akan kami tambahkan kolom baru `week_num`.\n",
-    "- Pada kolom `tie`, banyak missing value, harus diganti dengan 0 untuk menandakan tidak adanya kejadian seri/*tie*.\n",
-    "- Pada kolom `time`, tipe data `object`, akan kami biarkan karena `time` sendiri ambigu karena ada banyak `date`, kami akan buat kolom baru bernama `kickoff_time`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "f9815fea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Tahap Pengecekan 1: Games ---\n",
-      "Shape: (5324, 22)\n",
+      "Dimensi: (5324, 22)\n",
       "\n",
       "Tipe Data:\n",
       " year                       int64\n",
@@ -332,7 +182,184 @@
       "dtype: int64\n",
       "\n",
       "Duplicates: 0\n",
-      "---------------\n",
+      "======================================== \n",
+      "\n",
+      "==== Tahap Pengecekan 1 untuk Data attendance ====\n",
+      "\n",
+      "Dimensi: (10846, 8)\n",
+      "\n",
+      "Tipe Data:\n",
+      " team                  object\n",
+      "team_name             object\n",
+      "year                   int64\n",
+      "total                  int64\n",
+      "home                   int64\n",
+      "away                   int64\n",
+      "week                   int64\n",
+      "weekly_attendance    float64\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values:\n",
+      " team                   0\n",
+      "team_name              0\n",
+      "year                   0\n",
+      "total                  0\n",
+      "home                   0\n",
+      "away                   0\n",
+      "week                   0\n",
+      "weekly_attendance    638\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicates: 0\n",
+      "======================================== \n",
+      "\n",
+      "==== Tahap Pengecekan 1 untuk Data standings ====\n",
+      "\n",
+      "Dimensi: (638, 15)\n",
+      "\n",
+      "Tipe Data:\n",
+      " team                     object\n",
+      "team_name                object\n",
+      "year                      int64\n",
+      "wins                      int64\n",
+      "loss                      int64\n",
+      "points_for                int64\n",
+      "points_against            int64\n",
+      "points_differential       int64\n",
+      "margin_of_victory       float64\n",
+      "strength_of_schedule    float64\n",
+      "simple_rating           float64\n",
+      "offensive_ranking       float64\n",
+      "defensive_ranking       float64\n",
+      "playoffs                 object\n",
+      "sb_winner                object\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values:\n",
+      " team                    0\n",
+      "team_name               0\n",
+      "year                    0\n",
+      "wins                    0\n",
+      "loss                    0\n",
+      "points_for              0\n",
+      "points_against          0\n",
+      "points_differential     0\n",
+      "margin_of_victory       0\n",
+      "strength_of_schedule    0\n",
+      "simple_rating           0\n",
+      "offensive_ranking       0\n",
+      "defensive_ranking       0\n",
+      "playoffs                0\n",
+      "sb_winner               0\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicates: 0\n",
+      "======================================== \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cek_data(df):\n",
+    "    print(\"\\nDimensi:\",df.shape)\n",
+    "    print(\"\\nTipe Data:\\n\",df.dtypes)\n",
+    "    print(\"\\nMissing Values:\\n\",df.isnull().sum())\n",
+    "    print(\"\\nDuplicates:\",df.duplicated().sum())\n",
+    "\n",
+    "print(\"==== Tahap Pengecekan 1 untuk Data games ====\")\n",
+    "cek_data(games)\n",
+    "print(\"=\" * 40, \"\\n\")\n",
+    "\n",
+    "print(\"==== Tahap Pengecekan 1 untuk Data attendance ====\")\n",
+    "cek_data(attendance)\n",
+    "print(\"=\" * 40, \"\\n\")\n",
+    "\n",
+    "print(\"==== Tahap Pengecekan 1 untuk Data standings ====\")\n",
+    "cek_data(standings)\n",
+    "print(\"=\" * 40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb2d0ec6",
+   "metadata": {},
+   "source": [
+    "#### Identifikasi setelah pengecekan di atas.\n",
+    "\n",
+    "Untuk data/variabel `games`:\n",
+    "- Kolom `date` bertipe data `object`, harus diganti menjadi `date` untuk analisis deret waktu yang baik.\n",
+    "- Kolom `week` bertipe data `object` karena di baris bawah ada data yang berupa istilah. Daripada memformat kolom, kami tambahkan kolom baru yaitu `week_num`.\n",
+    "- Kolom `tie` banyak missing value, harus diganti dengan `0` untuk menandakan tidak adanya kejadian seri/*tie*.\n",
+    "- Kolom `time` bertipe data `object`. Akan kami biarkan karena `time` sendiri ambigu karena ada banyak `date`. Kami akan buat kolom baru untuk analisis bernama `kickoff_time`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f9815fea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Cek Akhir untuk Data games ====\n",
+      "\n",
+      "Dimensi: (5324, 22)\n",
+      "\n",
+      "Tipe Data:\n",
+      " year                       int64\n",
+      "week                      object\n",
+      "home_team                 object\n",
+      "away_team                 object\n",
+      "winner                    object\n",
+      "tie                       object\n",
+      "day                       object\n",
+      "date              datetime64[ns]\n",
+      "time                      object\n",
+      "pts_win                    int64\n",
+      "pts_loss                   int64\n",
+      "yds_win                    int64\n",
+      "turnovers_win              int64\n",
+      "yds_loss                   int64\n",
+      "turnovers_loss             int64\n",
+      "home_team_name            object\n",
+      "home_team_city            object\n",
+      "away_team_name            object\n",
+      "away_team_city            object\n",
+      "full_date_str             object\n",
+      "kickoff_time      datetime64[ns]\n",
+      "week_num                   int64\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values:\n",
+      " year              0\n",
+      "week              0\n",
+      "home_team         0\n",
+      "away_team         0\n",
+      "winner            0\n",
+      "tie               0\n",
+      "day               0\n",
+      "date              0\n",
+      "time              0\n",
+      "pts_win           0\n",
+      "pts_loss          0\n",
+      "yds_win           0\n",
+      "turnovers_win     0\n",
+      "yds_loss          0\n",
+      "turnovers_loss    0\n",
+      "home_team_name    0\n",
+      "home_team_city    0\n",
+      "away_team_name    0\n",
+      "away_team_city    0\n",
+      "full_date_str     0\n",
+      "kickoff_time      0\n",
+      "week_num          0\n",
+      "dtype: int64\n",
+      "\n",
+      "Duplicates: 0\n",
+      "======================================== \n",
+      "\n",
       "Data Games setelah dibersihkan:\n"
      ]
     },
@@ -456,7 +483,7 @@
          "type": "integer"
         }
        ],
-       "ref": "dacbe8bb-f6d7-4243-b3fc-fb35d46a4a47",
+       "ref": "6f4bfb52-0ee5-4be9-820c-e62a7c4cc06d",
        "rows": [
         [
          "0",
@@ -2107,16 +2134,15 @@
        "[5324 rows x 22 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Penanganan Data games\n",
     "games = pd.read_csv(raw_path['games']) # load dataset lagi untuk mencegah error\n",
     "\n",
-    "# Buat Kolom dummy untuk ubah tipe data kolom date\n",
+    "# Buat kolom dummy untuk ubah tipe data kolom date\n",
     "games['full_date_str'] = games['date'].astype(str) + ', ' + games['year'].astype(str)\n",
     "\n",
     "# Ubah tipe data ke datetime\n",
@@ -2143,7 +2169,12 @@
     "# Mengisi kolom tie yang kosong dengan 0\n",
     "games['tie'] = games['tie'].fillna(0)\n",
     "\n",
-    "cek_data(games, 'Games')\n",
+    "# Cek akhir\n",
+    "\n",
+    "print(\"==== Cek Akhir untuk Data games ====\")\n",
+    "cek_data(games)\n",
+    "print(\"=\" * 40, \"\\n\")\n",
+    "\n",
     "print(\"Data Games setelah dibersihkan:\")\n",
     "games"
    ]
@@ -2160,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8572e5ba",
    "metadata": {},
    "outputs": [
@@ -2248,7 +2279,7 @@
          "type": "integer"
         }
        ],
-       "ref": "aecdc3a7-7155-46a4-927e-87fcb01d4323",
+       "ref": "531a9b38-e337-489e-a3c0-1ea71c6e7998",
        "rows": [
         [
          "0",
@@ -2992,7 +3023,7 @@
        "[10208 rows x 8 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
