--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f9815fea",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
       "Duplicates: 0\n",
       "======================================== \n",
       "\n",
-      "Data Games setelah dibersihkan:\n"
+      "Data games setelah dibersihkan:\n"
      ]
     },
     {
@@ -483,7 +483,7 @@
          "type": "integer"
         }
        ],
-       "ref": "6f4bfb52-0ee5-4be9-820c-e62a7c4cc06d",
+       "ref": "2bf40b0b-317f-450a-9cdb-9b8d0083d7b3",
        "rows": [
         [
          "0",
@@ -2134,7 +2134,7 @@
        "[5324 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,12 +2170,11 @@
     "games['tie'] = games['tie'].fillna(0)\n",
     "\n",
     "# Cek akhir\n",
-    "\n",
     "print(\"==== Cek Akhir untuk Data games ====\")\n",
     "cek_data(games)\n",
     "print(\"=\" * 40, \"\\n\")\n",
     "\n",
-    "print(\"Data Games setelah dibersihkan:\")\n",
+    "print(\"Data games setelah dibersihkan:\")\n",
     "games"
    ]
   },
@@ -2184,14 +2183,14 @@
    "id": "04d8d138",
    "metadata": {},
    "source": [
-    "Data `Attendance`:\n",
-    "- Pada kolom `weekly_attendance` ada 638 missing values, harus di*drop* karena tidak ada permainan pada waktu itu.\n",
-    "- Kolom yang sama, data tipe masih `float64`, data hilang harus didrop dan konversi ke `int64` (karena tidak mungkin ada 0.5 pemain). :)"
+    "Untuk data/variabel `Attendance`:\n",
+    "- Kolom `weekly_attendance` ada 638 missing values, harus di*drop* karena tidak ada permainan yang berlangsung pada waktu itu.\n",
+    "- Kolom yang sama bertipe data `float64`, harus dikonversi ke `int64` karena jumlah *attendance* tidak mungkin desimal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8572e5ba",
    "metadata": {},
    "outputs": [
@@ -2199,8 +2198,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Tahap Pengecekan 1: Attendance ---\n",
-      "Shape: (10208, 8)\n",
+      "==== Cek Akhir untuk Data attendance ====\n",
+      "\n",
+      "Dimensi: (10208, 8)\n",
       "\n",
       "Tipe Data:\n",
       " team                 object\n",
@@ -2225,8 +2225,9 @@
       "dtype: int64\n",
       "\n",
       "Duplicates: 0\n",
-      "---------------\n",
-      "Data attendance setelah dibersihkan\n"
+      "======================================== \n",
+      "\n",
+      "Data attendance setelah dibersihkan:\n"
      ]
     },
     {
@@ -2279,7 +2280,7 @@
          "type": "integer"
         }
        ],
-       "ref": "531a9b38-e337-489e-a3c0-1ea71c6e7998",
+       "ref": "923c8eb8-58f3-4b8d-9c1a-e056e04ad8a1",
        "rows": [
         [
          "0",
@@ -3023,7 +3024,7 @@
        "[10208 rows x 8 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3035,8 +3036,12 @@
     "# Memperbaiki tipe data\n",
     "attendance['weekly_attendance'] = attendance['weekly_attendance'].astype(int)\n",
     "\n",
-    "cek_data(attendance, \"Attendance\")\n",
-    "print(\"Data attendance setelah dibersihkan\")\n",
+    "# Cek akhir\n",
+    "print(\"==== Cek Akhir untuk Data attendance ====\")\n",
+    "cek_data(attendance)\n",
+    "print(\"=\" * 40, \"\\n\")\n",
+    "\n",
+    "print(\"Data attendance setelah dibersihkan:\")\n",
     "attendance"
    ]
   },
@@ -3045,25 +3050,9 @@
    "id": "af655273",
    "metadata": {},
    "source": [
-    "Data `Standings`:\n",
-    "- Tidak ada kejanggalan."
+    "Untuk data/variabel `standings`:\n",
+    "- Tidak ada kejanggalan yang ditemukan sejauh ini."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecf87af4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd69646d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
