--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "0e375c71",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "c828b7f7",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "6b9fd747",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "5da9016d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "f9815fea",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
          "type": "integer"
         }
        ],
-       "ref": "81cc4ff5-b58b-4040-a48f-3793fd674b13",
+       "ref": "3a94b86d-061e-4784-ba51-b9e54be05264",
        "rows": [
         [
          "0",
@@ -2127,7 +2127,7 @@
        "[5324 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "8572e5ba",
    "metadata": {},
    "outputs": [
@@ -2273,7 +2273,7 @@
          "type": "integer"
         }
        ],
-       "ref": "406374f6-0a8a-4504-8375-84a9de639bbc",
+       "ref": "1a829d7b-c003-4d82-9036-84c52a3f1486",
        "rows": [
         [
          "0",
@@ -3017,7 +3017,7 @@
        "[10208 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,19 +3040,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af655273",
+   "id": "58cd33a8",
    "metadata": {},
    "source": [
     "Untuk data/variabel `standings`:\n",
-    "- Tidak ada kejanggalan yang ditemukan sejauh ini.\n",
-    "\n",
+    "- Tidak ada kejanggalan yang ditemukan sejauh ini tapi kami akan melakukan koreksi nama kolom untuk penggabungan dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7afdd420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standing = standings.rename(\n",
+    "    columns={\n",
+    "        'wins': 'seasons_wins',\n",
+    "        'loss': 'season_losses',\n",
+    "        'simple_rating': 'season_rating',\n",
+    "        'offensive_rating': 'off-rank',\n",
+    "        'defensive_ranking': 'def_rank',\n",
+    "        'sb_winner': 'superbowl_winner'\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af655273",
+   "metadata": {},
+   "source": [
     "#### Identifikasi yang lain (outlier).\n",
     "Pengecekan dilakukan pada data `attendance` dan `games`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "e7bba6dd",
    "metadata": {},
    "outputs": [
@@ -3110,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "eaf2f7c6",
    "metadata": {},
    "outputs": [
@@ -3156,18 +3181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "7e36cde0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Penggabungan games dan attendance\n",
-    "merged_df = pd.merge(\n",
+    "base_df = pd.merge(\n",
     "    games,\n",
     "    attendance,\n",
     "    left_on = ['home_team_name', 'year', 'week_num'],\n",
     "    right_on = ['team_name', 'year', 'week'],\n",
     "    how = 'inner'\n",
+    ")\n",
+    "\n",
+    "# Penggabungan base dan standings\n",
+    "merged_df = pd.merge(\n",
+    "    base_df,\n",
+    "    standings,\n",
+    "    left_on = ['home_team_name', 'year'],\n",
+    "    right_on = ['team_name', 'year'],\n",
+    "    how = 'left',\n",
+    "    suffixes = ('', '_standings_dup') # mengatasi nama duplikat\n",
     ")\n",
     "\n",
     "# Pembersihan pasca penggabungan data\n",
@@ -3185,6 +3220,14 @@
     "    else:\n",
     "        return row['pts_loss'] - row['pts_win']\n",
     "    \n",
+    "# Drop kolom yang tidak dipakai\n",
+    "cols_to_remove = [\n",
+    "    'calc_diff', 'math_error', 'games_played', \n",
+    "    'full_date_str', 'team_standings_dup', 'team_name_standings_dup', 'team'\n",
+    "]\n",
+    "\n",
+    "merged_df.drop(columns=cols_to_remove, inplace = True, errors = 'ignore')\n",
+    "    \n",
     "merged_df['home_score_diff'] = merged_df.apply(get_home_diff, axis = 1)"
    ]
   },
@@ -3198,11 +3241,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "e5ed62bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Pengecekan akhir dataset final ====\n",
+      "\n",
+      "Dimensi: (5104, 37)\n",
+      "\n",
+      "Tipe Data:\n",
+      " year                             int64\n",
+      "home_team                       object\n",
+      "away_team                       object\n",
+      "winner                          object\n",
+      "tie                             object\n",
+      "day                             object\n",
+      "date                    datetime64[ns]\n",
+      "time                            object\n",
+      "pts_win                          int64\n",
+      "pts_loss                         int64\n",
+      "yds_win                          int64\n",
+      "turnovers_win                    int64\n",
+      "yds_loss                         int64\n",
+      "turnovers_loss                   int64\n",
+      "home_team_name                  object\n",
+      "home_team_city                  object\n",
+      "away_team_name                  object\n",
+      "away_team_city                  object\n",
+      "kickoff_time            datetime64[ns]\n",
+      "week_num                         int64\n",
+      "total                            int64\n",
+      "home                             int64\n",
+      "away                             int64\n",
+      "attendance                       int64\n",
+      "wins                             int64\n",
+      "loss                             int64\n",
+      "points_for                       int64\n",
+      "points_against                   int64\n",
+      "points_differential              int64\n",
+      "margin_of_victory              float64\n",
+      "strength_of_schedule           float64\n",
+      "simple_rating                  float64\n",
+      "offensive_ranking              float64\n",
+      "defensive_ranking              float64\n",
+      "playoffs                        object\n",
+      "sb_winner                       object\n",
+      "home_score_diff                  int64\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values:\n",
+      " year                    0\n",
+      "home_team               0\n",
+      "away_team               0\n",
+      "winner                  0\n",
+      "tie                     0\n",
+      "day                     0\n",
+      "date                    0\n",
+      "time                    0\n",
+      "pts_win                 0\n",
+      "pts_loss                0\n",
+      "yds_win                 0\n",
+      "turnovers_win           0\n",
+      "yds_loss                0\n",
+      "turnovers_loss          0\n",
+      "home_team_name          0\n",
+      "home_team_city          0\n",
+      "away_team_name          0\n",
+      "away_team_city          0\n",
+      "kickoff_time            0\n",
+      "week_num                0\n",
+      "total                   0\n",
+      "home                    0\n",
+      "away                    0\n",
+      "attendance              0\n",
+      "wins                    0\n",
+      "loss                    0\n",
+      "points_for              0\n",
+      "points_against          0\n",
+      "points_differential     0\n",
+      "margin_of_victory       0\n",
+      "strength_of_schedule    0\n",
+      "simple_rating           0\n",
+      "offensive_ranking       0\n",
+      "defensive_ranking       0\n",
+      "playoffs                0\n",
+      "sb_winner               0\n",
+      "home_score_diff         0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Duplicates: 0\n",
+      "========================================\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"==== Pengecekan akhir dataset final ====\")\n",
+    "cek_data(merged_df)\n",
+    "print(\"=\" * 40)\n",
+    "\n",
     "merged_df.to_csv(clean_path, index = False)"
    ]
   }
