--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -2,47 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a372717",
-   "metadata": {},
-   "source": [
-    "# **Wrangling a NFL Dataset**\n",
-    "\n",
-    "Anda akan menulis laporan dalam bentuk Jupyter Notebook (.ipynb) yang memuat bagian-bagian sesuai rubrik penilaian di bawah.\n",
-    "\n",
-    "1. **Pendahuluan**\n",
-    "    - **Deskripsi dataset**\n",
-    "    - **Alasan dataset menarik**\n",
-    "    - **Pertanyaan/tujuan analisis**\n",
-    "\n",
-    "2. **Setup & Package**\n",
-    "    - **Semua import di bagian atas notebook**\n",
-    "    - **Path file disimpan dalam variabel**\n",
-    "    - **Penjelasan singkat fungsi paket**\n",
-    "\n",
-    "3. **Data Preparation**\n",
-    "    - **Import dataset**\n",
-    "    - **Langkah cleaning dan data wrangling dengan penjelasan Markdown**\n",
-    "    - **Standardisasi & transformasi**\n",
-    "    - **Save dataset bersih ke `data/processed/`**\n",
-    "\n",
-    "4. **Exploratory Data Analysis**, Minimal:\n",
-    "    - **3 visualisasi**\n",
-    "    - **2 tabel ringkasan**\n",
-    "    - **Interpretasi untuk setiap output**\n",
-    "\n",
-    "5. **Ringkasan & Kesimpulan**, Diskusikan:\n",
-    "    - **Temuan utama**\n",
-    "    - **Keterbatasan**\n",
-    "    - **Saran pengembangan**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "92e2f1b7",
    "metadata": {},
    "source": [
-    "## **Pengerjaan**:\n",
-    "### B. Setup & Package\n",
+    "# Final Project Data Wrangling\n",
+    "## A. Pendahuluan\n",
+    "- **Deskripsi dataset**: 'NFL Stadium Attendance', sebuah pak dataset(terdiri dari tiga sub dataset) yang mencatat *Pro Football Reference team standings*. Ada **tiga** buah sub dataset, yaitu:\n",
+    "    1. `attendance.csv` yang berisi kehadiran tim secara mingguan,\n",
+    "    2. `standings.csv` yang berisi hasil komputasi pertandingan tim, dan\n",
+    "    3. `games.csv` yang berisi data pertandingan antara tim yang mentah.\n",
+    "Ketiga dataset tersebut bisa digabungkan melalui kolom `year`, `team_name`, dan `team`.\n",
+    "- **Alasan dataset menarik**: Seperti yang telah kami sebutkan, dataset ini memiliki **tiga sub dataset** yang di mana bisa **digabungkan** serta kategori **dataset** seperti ini belum pernah kami olah sebelumnyaa. Dan juga untuk `standings.csv` adalah dataset yang berisi hasil komputasi, yang biasanya dataset umumnya benar-benar murni/mentah namun kami disajikan dengan **dua sub dataset mentah** dan **satu sub dataset yang diolah**.\n",
+    "\n",
+    "- **Pertanyaan/tujuan analisis**: -\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "Pada sel berikut kami impor library yang akan digunakan dan melakukan penyesuaian terhadap notebook kami."
    ]
@@ -3356,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9baedf49",
    "metadata": {},
    "outputs": [
