--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -89,10 +89,9 @@
    "metadata": {},
    "source": [
     "### 3. Penjelasan fungsi paket\n",
-    "- `pandas (pd)`: -\n",
-    "- `numpy (np)`: -\n",
-    "- `matplotlib.pyplot (plt)`: -\n",
-    "- `seaborn (sns)`: -"
+    "- `pandas (pd)`: library utama untuk manipulsi dan analisis data. Digunakan membaca dataset, pembersihan data, penggabungan tabel, dan agregasi serta grouping untuk statistik tambahan.\n",
+    "- `matplotlib.pyplot (plt)`: library untuk plotting grafik. Lebih ke kontrol elemen visual secara detail seperti ukuran canvas, subplot, label sumbu, judul, dan garis referensi.\n",
+    "- `seaborn (sns)`: library untuk visualisasi tingkat tinggi. Membuat grafik yang lebih cantik dan informatif."
    ]
   },
   {
